Issue #2869380 by drc0: avoid broken view modes to overflow the list

--- a/css/entityreference_dragdrop.css
+++ b/css/entityreference_dragdrop.css
@@ -20,6 +20,7 @@
   border-bottom: 1px solid gray;
 	border-top: 1px solid gray;
   list-style-type: none;
+  overflow: hidden;
 }
 
 .item-list ul.entityreference-dragdrop li:hover {
